# SwiftGrasp

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
cached/: fsd_AAPL_Q.p  fsd_AAPL_Y.p  fsd_AMZN_Q.p  fsd_AMZN_Y.p  fsd_BILI_Q.p  fsd_BILI_Y.p  fsd_GOOGL_Q.p  fsd_GOOGL_Y.p  fsd_MSFT_Q.p  fsd_MSFT_Y.p  struc_change_AAPL_Q_summary.p  struc_change_AAPL_Y_summary.p  struc_change_AMZN_Q_summary.p  struc_change_AMZN_Y_summary.p  struc_change_BILI_Q_summary.p  struc_change_BILI_Y_summary.p  struc_change_GOOGL_Q_summary.p  struc_change_GOOGL_Y_summary.p  struc_change_MSFT_Q_summary.p  struc_change_MSFT_Y_summary.p
notebooks/: test.ipynb
src/SwiftGrasp/: app.py  cach_data.py  plot_helper.py  preprocess_listing.py  save_to_db.py  utils.py
src/SwiftGrasp/resources/: fuzzy_match.p  processed_company_names.csv
tests/: test_utils.py
