[tool.poetry]
name = "SwiftGrasp"
version = "0.0.1"
description = "A web app to quickly grab the key financial statement information and stock data"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cyzhu/SwiftGrasp"
repository = "https://github.com/cyzhu/SwiftGrasp"
keywords = ["hypermodern"]
authors = ["Chongyang Zhu <cyzhu95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
numpy = "^1.19.5"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
plotly = "^5.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
