[tool.poetry]
name = "SwiftGrasp"
version = "0.0.2"
description = "A web app to quickly grab the key financial statement information and stock data"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cyzhu/SwiftGrasp"
repository = "https://github.com/cyzhu/SwiftGrasp"
keywords = ["financial statement","stock", "bayesian structural time series"]
authors = ["Chongyang Zhu <cyzhu95@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "<=1.3.5"
numpy = "^1.19.5"
matplotlib = ">=3.4.2,<3.6"
seaborn = "^0.11.2"
plotly = "^5.1.0"
yahoofinancials = "^1.6"
tfcausalimpact = "^0.0.11"
streamlit = "^1.11.1"
bokeh = "^2.4.3"
thefuzz = "^0.19.0"
python-Levenshtein = "^0.12.2"
SQLAlchemy = "^1.4.44"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
black = "^22.6.0"
flake8-black = "^0.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
